# client_v2/src/api/model/index.ts
@@ -147,6 +147,7 @@ export * from './usersList';
 export * from './usersSummary';
 export * from './userStatus';
 export * from './usersToggleRequest';
+export * from './portalMailTestRequest';
 export * from './usersPasswordRequest';
 export * from './usersUIDsRequest';
 export * from './userUpdateRequest';
